<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Application basics -->
    <string name="app_name">Polish Landmarks</string>
    <string name="appHelp">This is the help screen for Polish Landmarks</string>
    <string name="appHelpExtraAdd">-To add a place, please put in a new place</string>
    <string name="appHelpExtraRemove">-To remove a place, please hold a place you want to delete and press confirm right corner</string>
    <string name="appHelpExtraRate">-To rate a place, please put in a star rating for a specific place</string>
    <string name="appDisplayName"> Polish Landmarks</string>
    <string name="appDesc">Polish Landmarks application provides the user to add a new place, that is worth while visiting in Poland.
        Poland being one of the cheapest countries in Europe, attracts many tourists,so you can contribute to this project</string>
    <string name="appMoreInfo">For more information about Polish Landmarks application or to provide feedback, visit github</string>
    <string name="appAbout"> About Polish Landmarks</string>
    <string name="appWebsite">https://github.com/kacper97/PlApp</string>
    <string name="developer">Developed by Kacper Woloszyn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loader_text">LOADING ...</string>
    <string name="deactivate">Deactivate Account</string>
    <string name="welcome">Welcome</string>

    <!-- Landmark buttons. -->
    <string name="saveLandmarkBtn">Save Landmark</string>
    <string name="addALandmarkBtn">Add</string>
    <string name="editALandmarkBtn">Save changes</string>
    <string name="addImageBtn">Add Image</string>
    <string name="loginBtn">Login </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerBtn">Register</string>
    <string name="signOut">Log out</string>
    <string name="regBtn">Don\'t have an account ? Sign up</string>
    <string name="logBtn">Already have an account ? Log In</string>
    <string name="editImageBtn">Edit Image</string>
    <string name="landmarkName">Landmark Name</string>
    <string name="landmarkDescrtiption">LandmarkDescritpion</string>
    <!-- Landmark labels -->
    <string name="favouriteLandmarkLbl">Favourites</string>
    <string name="recentlyViewedLbl">Recently Added Landmark\'s</string>
    <string name="searchLandmarksLbl">Search</string>
    <string name="landmarkNameLbl">Landmark:</string>
    <string name="landmarkDescriptionLbl">Description:</string>
    <string name="informationLbl">Information</string>
    <string name="emptyMessageLbl">You have no Landmarks\'s added!</string>
    <string name="deleteLandmarksLbl">Delete Landmark</string>
    <!-- Descriptors of add -->
    <string name="addALandmark"> Add a Landmark:</string>
    <string name="landmarkLocation">Location:</string>
    <string name="landmarkPrice">Price for adult:</string>
    <string name="landmarkRating">Rate Landmark:</string>
    <string name="transportRating">Rate Transport:</string>
    <string name="additionalComments">Additional comments:</string>
    <string name="facilityRating">Rate Facility:</string>
    <string name="dateVisited">Date Visited: </string>
    <!--Menu strings -->
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="changePass">Enter new Password</string>
    <string name="changePassword">Change Password</string>
    <string name="menu_settings_save">Save</string>
    <!--Hints Add-->
    <string name="hintAddName">Add a name</string>
    <string name="hintAddDescription">Add a brief Description</string>
    <string name="hintPrice">Enter Price</string>
    <string name="hintLocation">Enter Location </string>
    <string name="hintDate">Enter Date</string>
    <!-- Hints edit -->
    <string name="editALandmark">Edit a Landmark:</string>
    <string name="hintEditName">New name</string>
    <string name="hintEditDescription">Add New Description</string>
    <string name="hintEditPrice">Enter New Price</string>
    <string name="hintEditLocation">Enter New Location </string>
    <string name="hintEditDate">Enter New Date</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_map">Polands Landmark Map</string>
    <string name="google_maps_key">AIzaSyCczaNzxL8xbEMr-EZS7XUFBvOMbZeFHMw</string>
    <string name="title_activity_maps">Map</string>
    <string name="disconnect_button">Detach account</string>
</resources>
