<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/editALandmark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        />

        <EditText
            android:id="@+id/editLandmarkName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="7dp"
            android:ems="10"
            android:hint="@string/hintEditName"
            android:inputType="textPersonName"
            />

        <TextView
            android:id="@+id/editLandmarkDescription"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="23dp"
            android:paddingTop="10dp"
            android:text="@string/landmarkDescriptionLbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
           />

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="7dp"
            android:ems="10"
            android:hint="@string/hintEditDescription"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/editPrice"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:paddingTop="10dp"
            android:text="@string/landmarkPrice"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             />

        <EditText
            android:id="@+id/editLandmarkPrice"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="7dp"
            android:ems="10"
            android:hint="@string/hintEditPrice"
            android:inputType="numberDecimal"
             />

        <TextView
            android:id="@+id/editDate"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="60dp"
            android:paddingTop="10dp"
            android:text="@string/dateVisited"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
           />

        <EditText
            android:id="@+id/editLandmarkDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="13dp"
            android:ems="10"
            android:hint="@string/hintEditDate"
            android:inputType="date"
          />

        <TextView
            android:id="@+id/editRatingFacilitiesLbl"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="48dp"
            android:paddingTop="10dp"
            android:text="@string/facilityRating"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
           />

        <RatingBar
        android:id="@+id/editRatingBarFacilities"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:rating="0"
        android:stepSize="0.5"
         />

        <TextView
            android:id="@+id/editRatingTransport"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="8dp"
            android:paddingTop="10dp"
            android:text="@string/transportRating"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            />

        <RatingBar
        android:id="@+id/editRatingBarTransport"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:rating="0"
        android:stepSize="0.5"
        />

    <TextView
        android:id="@+id/editRatingLandmark"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="12dp"
        android:paddingTop="10dp"
        android:text="@string/landmarkRating"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        />

        <RatingBar
            android:id="@+id/editRatingBarLandmark"
            android:layout_width="240dp"
            android:layout_height="43dp"
            android:layout_marginStart="-2dp"
            android:layout_marginEnd="4dp"
            android:rating="0"
            android:stepSize="0.5"
           />

        <TextView
            android:id="@+id/editLocation"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="16dp"
            android:paddingTop="10dp"
            android:text="@string/landmarkLocation"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         />

        <EditText
        android:id="@+id/editLandmarkLocation"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/hintEditLocation"
        android:inputType="text"
       />

        <Button
            android:id="@+id/editALandmarkBtn"
            android:layout_width="394dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="128dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorFontOffWhite"
            android:onClick="editLandmark"
            android:text="@string/editALandmarkBtn" />

        <ImageView
            android:id="@+id/editFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:onClick="toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.929"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/favourites_72" />


        <TextView
            android:id="@+id/editfooter"
            android:layout_width="match_parent"
            android:layout_height="27dp"
            android:background="@color/colorPrimary"
            android:paddingTop="5dp"
            android:text="@string/appWebsite"
            android:textAlignment="center"
            android:textColor="@color/colorFontWhite"
            android:textSize="16sp"
            android:textStyle="bold"
           />
    </LinearLayout>
</ScrollView>