<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddFragment">

    <Button
        android:id="@+id/addAnImage"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorFontOffWhite"
        android:onClick="addImage"
        android:text="@string/addImageBtn"
        app:layout_constraintBottom_toBottomOf="@+id/addfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toEndOf="@+id/addALandmarkBtn"
        app:layout_constraintTop_toBottomOf="@+id/addLandmarkDate"
        app:layout_constraintVertical_bias="0.247" />

    <EditText
        android:id="@+id/addLandmarkDate"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/hintDate"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/addfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addDate"
        app:layout_constraintTop_toBottomOf="@+id/addRatingBarFacilities"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/addDate"
        android:layout_width="127dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="60dp"
        android:paddingTop="10dp"
        android:text="@string/dateVisited"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/addALandmarkBtn"
        app:layout_constraintEnd_toStartOf="@+id/addLandmarkDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addRatingFacilitiesLbl"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="48dp"
        android:paddingTop="10dp"
        android:text="@string/facilityRating"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/addDate"
        app:layout_constraintEnd_toStartOf="@+id/addRatingBarFacilities"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/addRatingBarFacilities"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:rating="0"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addRatingFacilitiesLbl"
        app:layout_constraintTop_toBottomOf="@+id/addRatingBarTransport" />

    <TextView
        android:id="@+id/addRatingTransport"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="8dp"
        android:paddingTop="10dp"
        android:text="@string/transportRating"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/addRatingFacilitiesLbl"
        app:layout_constraintEnd_toStartOf="@+id/addRatingBarTransport"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addRatingLandmark"
        android:layout_width="100dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="12dp"
        android:paddingTop="10dp"
        android:text="@string/landmarkRating"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/addRatingTransport"
        app:layout_constraintEnd_toStartOf="@+id/addRatingBarLandmark"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <RatingBar
        android:id="@+id/addRatingBarTransport"
        android:layout_width="240dp"
        android:layout_height="46dp"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:rating="0"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addRatingTransport"
        app:layout_constraintTop_toBottomOf="@+id/addRatingBarLandmark" />

    <EditText
        android:id="@+id/addLandmarkLocation"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/hintLocation"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addLocation"
        app:layout_constraintTop_toBottomOf="@+id/addLandmarkPrice" />

    <TextView
        android:id="@+id/addLocation"
        android:layout_width="127dp"
        android:layout_height="38dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="10dp"
        android:text="@string/landmarkLocation"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/addRatingLandmark"
        app:layout_constraintEnd_toStartOf="@+id/addLandmarkLocation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPrice" />

    <TextView
        android:id="@+id/addfooter"
        android:layout_width="384dp"
        android:layout_height="44dp"
        android:background="@color/colorPrimary"
        android:paddingTop="5dp"
        android:text="@string/appWebsite"
        android:textAlignment="center"
        android:textColor="@color/colorFontWhite"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/addPrice"
        android:layout_width="127dp"
        android:layout_height="35dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="2dp"
        android:paddingTop="10dp"
        android:text="@string/landmarkPrice"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintEnd_toStartOf="@+id/addLandmarkPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDescription" />

    <TextView
        android:id="@+id/addLandmarkDescription"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="23dp"
        android:paddingTop="10dp"
        android:text="@string/landmarkDescriptionLbl"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/addPrice"
        app:layout_constraintEnd_toStartOf="@+id/addDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addName" />

    <TextView
        android:id="@+id/addName"
        android:layout_width="127dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/addALandmark"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/addLandmarkDescription"
        app:layout_constraintEnd_toStartOf="@+id/addLandmarkName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/addLandmarkName"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/hintAddName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addLandmarkPrice"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/hintPrice"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addLocation"
        app:layout_constraintTop_toBottomOf="@+id/addDescription" />

    <EditText
        android:id="@+id/addDescription"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/hintAddDescription"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addLandmarkDescription"
        app:layout_constraintTop_toBottomOf="@+id/addLandmarkName" />

    <RatingBar
        android:id="@+id/addRatingBarLandmark"
        android:layout_width="240dp"
        android:layout_height="43dp"
        android:layout_marginStart="-2dp"
        android:layout_marginEnd="4dp"
        android:rating="0"
        android:stepSize="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addRatingLandmark"
        app:layout_constraintTop_toBottomOf="@+id/addLandmarkLocation" />

    <Button
        android:id="@+id/addALandmarkBtn"
        android:layout_width="78dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:background="@color/colorFontOffWhite"
        android:text="@string/addALandmarkBtn"
        app:layout_constraintBottom_toTopOf="@+id/addfooter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLandmarkDate" />

</android.support.constraint.ConstraintLayout>