<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFontWhite"
    tools:context=".activities.ChangePassword">

    <TextView
        android:text="@string/password"
        android:layout_width="139dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/settings_email3"
        android:layout_marginStart="8dp" android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_email2"
        />
    <TextView
        android:text="@string/email"
        android:layout_width="139dp"
        android:layout_height="44dp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/settings_email2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" android:layout_marginStart="8dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:id="@+id/relativeLayout">

    </RelativeLayout>
    <Button
        android:text="@string/menu_settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button_settings_save"
        android:onClick="change"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_password"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintVertical_bias="0.053"/>
    <TextView
        android:text="TextView"
        android:layout_width="222dp"
        android:layout_height="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/settings_email"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintStart_toEndOf="@+id/settings_email2"
        android:layout_marginStart="8dp"/>
    <EditText
        android:layout_width="221dp"
        android:layout_height="50dp"
        android:ems="10"
        android:id="@+id/settings_password"
        android:hint="@string/changePass"
        android:inputType="text" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/settings_email"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/settings_email3"
        android:layout_marginStart="8dp"/>
</android.support.constraint.ConstraintLayout>